Fixing layout bugs, removing grid, adding flexbox

--- a/css/site.css
+++ b/css/site.css
@@ -2,7 +2,7 @@
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 25;
+    z-index: 300;
     top: 0;
     left: 0;
     background-color: var(--muted-border-color);
@@ -20,7 +20,7 @@
     display: none;
     background-color: var(--contrast);
     opacity: 0.4;
-    z-index: 2;
+    z-index: 201;
     position: fixed;
     top: 0;
     left: 0;
@@ -113,21 +113,42 @@ article > header {
     min-width: 50px;
 }
 
-/* Thanks cssgrid-generator.com */
-.skillGrid {
-    display: grid;
-    grid-template-columns: 0.75fr 2fr 0.75fr 2fr 0.75fr 2fr;
-    grid-template-rows: repeat(5, 1fr);
-    grid-column-gap: 3px;
-    grid-row-gap: 5px;
-    align-items: center;
-} 
+.skill-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content:flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
+  }
+  
+.skill-item {
+    width: 100%; 
+    margin: 1%;
+    display: block;
+    flex-grow: 0;
+    flex-shrink: 1;
+    flex-basis: auto;
+    align-self: auto;
+    order: 0;
+    background: var(--code-background-color);
+    box-shadow: var(--card-box-shadow);
+    padding: 5px;
+    padding-left: var(--spacing);
+}
 
-.skillGrid > div > p {
-    margin-bottom: 0;
+.skill-item > p {
+    margin-bottom: 0.7em;
+    display: inline-block;
+    line-height: 50px;
+}
+
+p.skill-blurb {
+    margin-bottom: 0.1em;
 }
 
 #cv-download {
+    display: none;
     position: fixed;
     right: calc(var(--spacing) * 11.5);
 } 
@@ -161,6 +182,8 @@ article {
     padding: 20px;
     
   }
+
+
 
   .example-image-container {
       margin-bottom: 1rem;
@@ -196,25 +219,62 @@ article {
     margin: 0;
   }
 
+  .photo-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content:center;
+    align-items: center;
+    align-content: center;
+  }
+  
+  .photo-item {
+    width: 100%; 
+    margin: 1%;
+    display: block;
+    flex-grow: 0;
+    flex-shrink: 1;
+    flex-basis: auto;
+    align-self: auto;
+    order: 0;
+    background: var(--code-background-color);
+    box-shadow: var(--card-box-shadow);
+    padding: 5px;
+    text-align: center;
+  }
+
+#cv-download-small {
+    display: unset;
+}
+
+
 @media screen and (min-width: 576px) {
     #cv-download {
-        position: fixed;
-        right: calc(var(--spacing) * 5.5);
+        display: none;
     } 
 
-    .example-item 
+    #cv-download-small {
+        display: unset;
+    }
+
+    .example-item, .photo-item
     {
         flex: 0 1 100%;
     }
+    
 }
 
 @media screen and (min-width: 768px) {
     #cv-download {
-        position: fixed;
+        display: unset;
         right: calc(var(--spacing) * 6.5);
     } 
 
-    .example-item 
+    #cv-download-small {
+        display: none;
+    }
+
+    .example-item, .photo-item, .skill-item
     {
         flex: 0 1 48%;
     }
@@ -222,11 +282,15 @@ article {
 
 @media screen and (min-width: 992px) {
     #cv-download {
-        position: fixed;
+        display: unset;
         right: calc(var(--spacing) * 8.5);
     } 
 
-    .example-item 
+    #cv-download-small {
+        display: none;
+    }
+
+    .example-item, .photo-item, .skill-item
     {
         flex: 0 1 48%;
     }
@@ -234,11 +298,15 @@ article {
 
 @media screen and (min-width: 1200px) {
     #cv-download {
-        position: fixed;
+        display: unset;
         right: calc(var(--spacing) * 11.5);
     } 
 
-    .example-item 
+    #cv-download-small {
+        display: none;
+    }
+
+    .example-item, .photo-item, .skill-item
     {
         flex: 0 1 30%;
     }
